# com7033-assignment-2414315

./: README.md  Untitled-1.ipynb  __init__.py  ```bash.md  auth.py  cleanup.sh  conftest.py  dashboard.py  db_mongo.py  db_sqlite.py  form.html  forms.py  healthcare-dataset-stroke-data.csv  index.html  list.html  login.html  patient.py  pyproject.toml  register.html  run.bat  run.py  setup.sh  test_auth_routes.py  test_patient_model.py  test_patient_routes.py  test_user_model.py
