[project]
name = "stroke-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bleach==6.1.0",
    "email-validator==2.2.0",
    "flask==3.0.3",
    "flask-login==0.6.3",
    "flask-wtf==1.2.1",
    "pymongo==4.8.0",
    "pytest==8.2.2",
    "pytest-flask==1.3.0",
    "python-dotenv==1.0.1",
    "werkzeug==3.0.3",
    "wtforms==3.1.2",
]
